@@ -2444,7 +2444,7 @@ static void dyn_larlsl(bool islar) {
 #include "dyn_fpu.h"
 
 #ifdef X86_DYNREC_MMX_ENABLED
-#include "mmx_gen.h"
+#include "dyn_mmx.h"
 #define dyn_mmx_check() if ((dyn_dh_fpu.dh_fpu_enabled) && (!fpu_used)) {dh_fpu_startup();}
 #endif
 
@@ -2595,22 +2595,23 @@ restart_prefix:
 			case 0xe2:case 0xe5:case 0xe8:case 0xe9:case 0xeb:case 0xec:
 			case 0xed:case 0xef:case 0xf1:case 0xf2:case 0xf3:case 0xf5:
 			case 0xf8:case 0xf9:case 0xfa:case 0xfc:case 0xfd:case 0xfe:
+				if (CPU_ArchitectureType<CPU_ARCHTYPE_PMMXSLOW) goto illegalopcode;
 				dyn_mmx_check(); dyn_mmx_op(dual_code); break;
 
 			/* SHIFT mm, imm8*/
 			case 0x71:case 0x72:case 0x73:
-				dyn_mmx_check(); dyn_mmx_shift_imm8(dual_code); break;
-
 			/* MOVD mm, r/m32 */
-			case 0x6e:dyn_mmx_check(); dyn_mmx_movd_pqed(); break;
+			case 0x6e:
 			/* MOVQ mm, mm/m64 */
-			case 0x6f:dyn_mmx_check(); dyn_mmx_movq_pqqq(); break;
+			case 0x6f:
 			/* MOVD r/m32, mm */
-			case 0x7e:dyn_mmx_check(); dyn_mmx_movd_edpq(); break;
+			case 0x7e:
 			/* MOVQ mm/m64, mm */
-			case 0x7f:dyn_mmx_check(); dyn_mmx_movq_qqpq(); break;
+			case 0x7f:if (CPU_ArchitectureType<CPU_ARCHTYPE_PMMXSLOW) goto illegalopcode;
+				dyn_mmx_check(); dyn_mmx_op(dual_code); break;
 			/* EMMS */
-			case 0x77:dyn_mmx_check(); dyn_mmx_emms(); break;
+			case 0x77:if (CPU_ArchitectureType<CPU_ARCHTYPE_PMMXSLOW) goto illegalopcode;
+				dyn_mmx_check(); dyn_mmx_emms(); break;
 #endif
 
 			default:
